plugins/opa/examples-rego-v1/nginx-cve-2023-4886/policy.failure.yaml
# This manifest is used to test the accompanying OPA policy.
# Applying this in your cluster could create a security vulnerability!
# This deployment is for policy testing/validation only!
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-object
  namespace: staging
spec:
  ingressClassName: nginx-ingress
  rules:
  - host: tofu.yahoo.com
    http:
      paths:
      - backend:
          service:
            name: tofu-svc
            port:
              number: 3000
        path: /
        # This will cause the policy to fail.
        pathType: ImplementationSpecific
